--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,8 @@ Thumbs.db
 # storage/oauth-private.key
 # storage/oauth-public.key
 # storage/debugbar/
-/bootstrap/cache/
-public/storage
+# /bootstrap/cache/
+# public/storage
 /public/hot
 # /public/storage
 /public/js/*.map
